--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
  <b>ndsjbn <strong>sdfsa</strong></b>
 <p>Anyad picsajat.Anyad picsajat.Anyad picsajat.</p> 
 
-<a href="http://127.0.0.1:5500/about.html">tablazat erre lesz</a>
+<a href="about.html">tablazat erre lesz</a>
 </body>
 </html>
